--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="4SIKnBhxtaUJvLeKRPNDfCvZzLaScIXt255oaFSMtMA" />
     <meta name="description" content="Discover 2025’s top 15 sites to buy cars online, from budget rides to luxury vehicles.">
     <meta name="keywords" content="online car buying, car buying sites, used cars, new cars, car deals, car shipping, 2025">
     <title>The Ultimate 2025 List: 15 Best Sites to Buy Cars Online Today</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://one5-best-sites-to-buy-cars-online-today.onrender.com">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9J3SZ3G3WD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9J3SZ3G3WD');
+</script>
 </head>
 <body class="fade-in">
     <!-- Header -->
